# person-db-demo

./: .gitignore  pyproject.toml
app/: api_queries.py  database_connection.py  gremlin_queries.py  ingestion_prep.py  main.py  output.txt
app/data/: 2019-2023_Leads_List_Test.csv  2019-2023_Leads_List_Test_deduped.csv
app/data_objects/: __init__.py  event.py  keyword.py  marketing_campaign.py  organization.py  person.py  product.py  project.py  publication.py  publication_product.py  zymo_netsuite_product.py  zymo_product.py  zymo_web_product.py
app/database/: __init__.py  bulk_api_caller.py  bulk_query_executor.py  connection.py  edge_adder.py
app/dicts/: keyword_id_dict.pickle  organization_id_dict.pickle  person_id_dict.pickle
app/results/: 2019-2023_addresses.csv  2019-2023_addresses_nonbulk.csv  sample_addresses.csv
database/: bulk_query_executor.py
