[tool.poetry]
name = "person-db-demo"
version = "0.1.0"
description = ""
authors = ["Nicole T. <nbtrieu@uci.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.9.3"
aiosignal = "^1.3.1"
async-timeout = "^4.0.3"
charset-normalizer = "^3.3.2"
frozenlist = "^1.4.1"
gremlinpython = "^3.7.1"
idna = "^3.6"
isodate = "^0.6.1"
multidict = "^6.0.5"
nest-asyncio = "^1.6.0"
numpy = "^1.26.4"
pandas = "1.5.3"
python-dateutil = "^2.8.2"
pytz = "^2024.1"
tqdm = "^4.66.2"
tzdata = "^2024.1"
yarl = "^1.9.4"
fastapi = "^0.110.0"
requests = "^2.31.0"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
